fix: Content card when title is too long

--- a/src/styles/components/contents/Content.module.css
+++ b/src/styles/components/contents/Content.module.css
@@ -30,6 +30,16 @@
 .headerContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  overflow-x: hidden;
+  height: 35%;
+}
+
+.titleContainer {
+  display: flex;
+  justify-content: center;
+  overflow-x: hidden;
+  padding: 0 10px;
 }
 
 .type {
@@ -38,8 +48,11 @@
 }
 
 .title {
-  margin: 5px auto;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
+  text-align: center;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .footerContainer {
